--- a/Index.html
+++ b/Index.html
@@ -3,110 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Purchase Order Analysis</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <title>GitHub Pages Test</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        .chart-container {
-            width: 80%;
+            max-width: 800px;
             margin: 0 auto;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-        th, td {
-            border: 1px solid #ccc;
-            padding: 8px;
+            padding: 20px;
+            line-height: 1.6;
             text-align: center;
-        }
-        th {
             background-color: #f4f4f4;
+        }
+        .container {
+            background-color: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
         }
     </style>
 </head>
 <body>
-    <h1>Purchase Order Analysis</h1>
-    <section>
-        <h2>Grouped Items</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Group</th>
-                    <th>Item Code</th>
-                    <th>Description</th>
-                    <th>Quantity</th>
-                    <th>Total Cost (INR)</th>
-                </tr>
-            </thead>
-            <tbody id="itemTable">
-                <!-- Data will be populated dynamically -->
-            </tbody>
-        </table>
-    </section>
-
-    <section>
-        <h2>Data Visualization</h2>
-        <div class="chart-container">
-            <canvas id="costChart"></canvas>
-        </div>
-    </section>
-
-    <script>
-        const items = [
-            { group: "Snacks", code: "68243", desc: "Tapioca Chips", qty: 285, cost: 15219.12 },
-            { group: "Snacks", code: "76855", desc: "Banana Chips", qty: 190, cost: 15845.95 },
-            { group: "Desserts", code: "789750", desc: "Rose Cookies", qty: 100, cost: 7500.04 },
-            { group: "Desserts", code: "71355", desc: "Coconut Halwa", qty: 180, cost: 39567.63 },
-            { group: "Spices", code: "443364", desc: "Coconut Chutney", qty: 100, cost: 12338.02 }
-        ];
-
-        // Populate Table
-        const tableBody = document.getElementById('itemTable');
-        items.forEach(item => {
-            const row = document.createElement('tr');
-            row.innerHTML = `<td>${item.group}</td>
-                             <td>${item.code}</td>
-                             <td>${item.desc}</td>
-                             <td>${item.qty}</td>
-                             <td>${item.cost.toFixed(2)}</td>`;
-            tableBody.appendChild(row);
-        });
-
-        // Graph Data
-        const groups = [...new Set(items.map(item => item.group))];
-        const groupCosts = groups.map(group => {
-            return items.filter(item => item.group === group)
-                        .reduce((sum, item) => sum + item.cost, 0);
-        });
-
-        // Render Chart
-        const ctx = document.getElementById('costChart').getContext('2d');
-        new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: groups,
-                datasets: [{
-                    label: 'Total Cost (INR)',
-                    data: groupCosts,
-                    backgroundColor: ['#4CAF50', '#FFC107', '#2196F3', '#FF5722', '#9C27B0']
-                }]
-            },
-            options: {
-                responsive: true,
-                plugins: {
-                    legend: { position: 'top' }
-                },
-                scales: {
-                    y: { beginAtZero: true }
-                }
-            }
-        });
-    </script>
+    <div class="container">
+        <h1>🎉 GitHub Pages is Working!</h1>
+        <p>Congratulations! This is a test page to verify that your GitHub Pages site is published successfully.</p>
+        <p>If you can see this page, your GitHub Pages deployment was successful.</p>
+        <footer>
+            <small>Created to test GitHub Pages publication</small>
+        </footer>
+    </div>
 </body>
 </html>
-
